# rusty-clock

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: clock.rs  mod.rs  plate.rs
src/views/: app.rs
styles/: _board.scss  _clock.scss  _plate.scss  index.scss
